@@ -236,6 +236,10 @@ public class PDFParserConfig implements Serializable {
      * <p/>
      * For this parameter to have any effect, {@link #extractInlineImages} must be
      * set to <code>true</code>.
+     * <p>
+     * Because of TIKA-1742 -- to avoid infinite recursion -- no matter the setting
+     * of this parameter, the extractor will only pull out one copy of one image per
+     * page.  This parameter tries to capture uniqueness across the entire document.
      *
      * @param extractUniqueInlineImagesOnly
      */
